# ForgeAgent

./: .env.example  .gitignore  AGENTS.md  README.md  README_EN.md  START.md  backend_agent_architecture.md  calculator.py  start-backend.bat
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  exceptions.py  main.py
backend/app/agent/: __init__.py  graph.py  llm_client.py  llm_stream_split.py  nodes.py  state.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  database.py  deps.py  exceptions.py  llm_context_budget.py  llm_openai.py  llm_retry.py  workspace_config.py
backend/app/models/: __init__.py  base.py  message.py  session.py  setting.py  task.py  task_event.py
backend/app/modules/: __init__.py
backend/app/repositories/: __init__.py  event_repository.py  message_repository.py  session_repository.py  settings_repository.py  task_repository.py
backend/app/schemas/: __init__.py  approval.py  common.py  event.py  json_datetime.py  session.py  settings.py  task.py  tools.py  workspace.py
backend/app/services/: __init__.py  event_stream_service.py  session_service.py  settings_service.py  task_service.py  tool_service.py
backend/app/shared/: __init__.py  blackboard.py  langchain_content.py  llm_json_parse.py  payload.py  plan_step_tool.py  react_llm_output.py  tool_context.py  tool_observation_compact.py  tool_validation.py  utc_datetime.py  workspace_snapshot.py
backend/app/tools/: __init__.py  builtin.py  mcp_sources.py  registry.py  skill_sources.py
backend/scripts/: smoke_plan_steps.py
backend/tests/: conftest.py  test_builtin_tools.py  test_circuit_breaker.py  test_conversation_summary.py  test_forge_file_tools.py  test_llm_context_budget.py  test_llm_planner_extract.py  test_math_tools.py  test_parse_llm_json.py  test_plan_step_tool.py  test_planner_llm_parse_retry.py  test_python_repl_tool.py  test_react_round_json.py  test_reuse_message_task_cascade.py  test_session_context_messages.py  test_shell_compat.py  test_skill_import_context.py  test_skill_paths_validate.py  test_step_react_loop_parse_retry.py  test_tool_observation_compact.py  test_tool_registry_execute.py  test_workspace_snapshot.py
backend/tests/docs/: PHASE_MAP.md  README.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
backend/tests/phase0/: test_environment.py
backend/tests/phase1/: conftest.py  test_data_layer.py
backend/tests/phase2/: conftest.py  test_rest_api.py
backend/tests/phase3/: conftest.py  test_tool_registry.py
backend/tests/phase4/: conftest.py  test_agent_runtime.py
docs/: 03-agent-planning.md  (+22 more)
(+267 files in other folders)
