[project]
name = "backend"
version = "0.1.0"
description = "ForgeAgent FastAPI 服务骨架"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=1.1.0,<2",
  "langchain-core>=1.2.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "phase0: 仓库与环境（见 docs/DEVELOP_ORDER 阶段0）",
  "phase1: 数据层（见 docs/DEVELOP_ORDER 阶段1）",
  "phase2: HTTP API 非流式（REST + Mock 任务）",
  "phase3: 工具注册表与 MCP（预留）",
  "phase4: Agent 运行时（LangGraph 最小图）",
  "phase5: SSE 任务事件流",
  "phase8: 质量与总验收（E2E seq、列表契约、OpenAPI）",
]
