[project]
name = "backend"
version = "0.1.0"
description = "ForgeAgent FastAPI 服务骨架"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=1.1.0,<2",
  "langchain-core>=1.2.0,<2",
  "langchain-openai>=0.3.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

