[project]
name = "backend"
version = "0.1.0"
description = "ForgeAgent FastAPI 服务骨架"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=1.1.0,<2",
  "langgraph-checkpoint-sqlite>=3.0.0,<4",
  "langchain-core>=1.2.0,<2",
  "langchain-openai>=0.3.0,<1",
  "langchain-community>=0.4.0,<0.5",
  "langchain-experimental>=0.3.0,<0.5",
  "langchain-tavily>=0.2.0,<0.4",
  "ddgs>=8.0.0",
  "tiktoken>=0.8.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]
checkpoint-postgres = [
  "langgraph-checkpoint-postgres>=3.0.0,<4",
  "psycopg[binary]>=3.2.0,<4",
  "psycopg-pool>=3.2.0,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

